[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://art/buttonFont.tres" type="DynamicFont" id=2]


[sub_resource type="DynamicFontData" id=1]
font_path = "res://art/majorforce.ttf"

[sub_resource type="DynamicFont" id=2]
size = 200
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="msgLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "The Quick brown fox jumps over the lazy dog."
align = 1
valign = 1
autowrap = true

[node name="msgTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 2.0
one_shot = true

[node name="pauseScreen" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -382.5
margin_right = 382.5
custom_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="pauseScreen"]
margin_right = 765.0
margin_bottom = 1380.0
custom_constants/separation = 60
alignment = 1

[node name="pauseLabel" type="Label" parent="pauseScreen/VBoxContainer"]
margin_top = 375.0
margin_right = 765.0
margin_bottom = 582.0
custom_fonts/font = SubResource( 2 )
text = "PAUSED"
align = 1
valign = 1
autowrap = true

[node name="continueButton" type="Button" parent="pauseScreen/VBoxContainer"]
pause_mode = 2
margin_top = 642.0
margin_right = 765.0
margin_bottom = 793.0
custom_fonts/font = ExtResource( 2 )
text = "Continue"

[node name="quitButton" type="Button" parent="pauseScreen/VBoxContainer"]
pause_mode = 2
margin_top = 853.0
margin_right = 765.0
margin_bottom = 1004.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Quit To Menu"

[connection signal="timeout" from="msgTimer" to="." method="_on_msgTimer_timeout"]
[connection signal="pressed" from="pauseScreen/VBoxContainer/continueButton" to="." method="_on_continueButton_pressed"]
[connection signal="pressed" from="pauseScreen/VBoxContainer/quitButton" to="." method="_on_quitButton_pressed"]
